update index.html and styles.css

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,19 @@
 
-main{
+.main{
     display: grid;
-    grid-auto-flow: row;
+    grid-template-columns: repeat(5, 2fr);
+    grid-template-rows: repeat(4,200px);
+    gap: 5px;
+    margin: 5%;
+    box-sizing: border-box;
+    align-items: stretch;
+    justify-content: center;
+}
+.box{
+    font-size: 4em;
+    text-align: center;
+    padding: 5%;
+    background-color: yellow;
+    align-self: stretch;
+    border-radius: 10px;
 }
